--- a/api/package.json
+++ b/api/package.json
@@ -8,5 +8,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1"
+  },
+  "scripts": {
+    "dev": "nodemon index.js"
   }
 }
