--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
     "multer": "^1.4.5-lts.1"
   },
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "node index.js",
     "build": "react-scripts build"
   }
 }
