--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "dev": "nodemon index.js",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "start": "node index.js"
   }
 }
