--- a/blogsphere/package.json
+++ b/blogsphere/package.json
@@ -2,7 +2,7 @@
   "name": "blogsphere",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:4000",
+  "proxy": "BASE_URL",
   "dependencies": {
     "@editorjs/editorjs": "^2.26.5",
     "@emotion/react": "^11.10.8",
